5gcore/templates/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  ports:
  - port: 27017
  selector:
    app: open5gs-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open5gs-mongodb-d
spec:
  selector:
    matchLabels:
      app: open5gs-mongodb
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: open5gs-mongodb
    spec:
      containers:
      - image: quay.io/kskels/nextepc-mongodb
        name: open5gs-mongodb
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: mongodb-pv-claim
