5gcore/templates/web-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open5gs-webui
spec:
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: open5gs-webui
    weight: 100
